# drone_analytics

./: .gitignore  Cargo.toml  README.md  drone.py
data/: mediamtx.yml  rtsp_links.yml
src/: analytics.rs  db.rs  helpers.rs  main.rs  mediamtx.rs  state.rs
