[package]
name = "drone_analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
opencv = "0.98"
jamtrack-rs = { git = "https://github.com/kadu-v/jamtrack-rs.git" }
ultralytics-inference = { git = "https://github.com/ultralytics/inference.git" }
chrono = "0.4"
crossbeam-channel = "0.5"
ndarray = "=0.17.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
sysinfo = "0.38.0"

[features]
default = []
coreml = ["ultralytics-inference/coreml"]
cuda = ["ultralytics-inference/cuda"]
